--- a/.github/workflows/sync-supabase-notion.yml
+++ b/.github/workflows/sync-supabase-notion.yml
@@ -23,7 +23,7 @@ on:
         required: false
         default: '800'
       rate_delay:
-        description: 'Seconds between  writes'
+        description: 'Seconds between writes'
         required: false
         default: '0.20'
       username_filter:
@@ -70,8 +70,28 @@ jobs:
         name: Get New York hour
         run: echo "hour=$(TZ=America/New_York date +%H)" >> $GITHUB_OUTPUT
 
+      # ✅ Preflight: verify Notion credentials and DB access before running R
+      - name: Preflight – Notion auth check
+        run: |
+          set -e
+          echo "Checking /v1/databases/${NOTION_DATABASE_ID}…"
+          code=$(curl -s -o /tmp/notion.json -w "%{http_code}" \
+            -H "Authorization: Bearer ${NOTION_TOKEN}" \
+            -H "Notion-Version: 2022-06-28" \
+            https://api.notion.com/v1/databases/${NOTION_DATABASE_ID})
+          echo "HTTP ${code}"
+          if [ "$code" != "200" ]; then
+            echo "::error title=Notion API failed::See payload below (most fields redacted)."
+            sed -E 's/"access_token":"[^"]+"/"access_token":"***"/g' /tmp/notion.json | head -200
+            exit 1
+          fi
+          echo "✅ Notion DB schema fetch OK."
+        env:
+          NOTION_TOKEN:        ${{ secrets.NOTION_TOKEN }}
+          NOTION_DATABASE_ID:  ${{ secrets.NOTION_DATABASE_ID }}
+
       - id: run
-        name: Run  sync
+        name: Run sync
         if: ${{ github.event_name != 'schedule' || steps.nytime.outputs.hour == '11' }}
         env:
           NOTION_TOKEN:        ${{ secrets.NOTION_TOKEN }}
